Fixed header scrolling on mobile.

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -13,6 +13,7 @@
     background-color: var(--bg);
     color: var(--text);
     font-size: 1.2rem;
+    overflow-x: hidden;
   
     font-family: 'Signika', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   }
@@ -154,19 +155,27 @@ li{
 
 header {
   padding: 0.5rem 0.5rem 0.5rem 2.5rem;
-  background: linear-gradient(to right, transparent 2.4rem, var(--bg-tr) 2.4rem);
   position: absolute;
   top: 0;
-  right: -9rem;
+  right: 0;
+  max-width: 0;
+  overflow: hidden;
   z-index: 1000;
   transition: all 0.4s;
+  white-space: nowrap;
 }
 
 header.open {
+  max-width: 100%;
   right: 0;
+  background: linear-gradient(to right, transparent 2.4rem, var(--bg-tr) 2.4rem);
 }
 
 .hamburger-helper {
+  position: absolute;
+  top: 0;
+  left: 0px;
+
   cursor: pointer;
   background-color: transparent;
 }
@@ -206,6 +215,14 @@ header.open {
 .open .hamburger::after {
   transform: rotate(-90deg) translate(5px,-1px);
 }
+nav {
+  opacity: 0;
+  transition-property: opacity;
+  transition-duration: 0.8s;
+}
+.open nav {
+  opacity: 1;
+}
 
 
 @media screen and (min-width: 600px), screen and (min-device-width: 600px) {
@@ -227,6 +244,7 @@ header.open {
     right: 0;
     padding: 0.5rem;
     background: var(--bg-tr);
+    width: 100%;
   }
   header > nav {
     display: flex;
